# hibiki

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  alsa_out.cpp  alsa_out.hpp  audio_file.cpp  audio_file.hpp  audio_file_test.cpp  audio_io.cpp  audio_io.hpp  audio_types.hpp  base_playback.hpp  base_plugin.hpp  clip.cpp  clip.hpp  clip_test.cpp  core_logic_test.cpp  coreaudio_out.cpp  coreaudio_out.hpp  global_state.hpp  gui.py  hibiki_ipc.fbs  hibiki_project.fbs  hibiki_request.fbs  hibiki_response.fbs  ipc.cpp  ipc.hpp  main.cpp  midi.cpp  midi.hpp  midi_test.cpp  mock_audio.hpp  mypy_test.py  playback_base.hpp  plugin_base.hpp  project.cpp  project.hpp  project_test.cpp  (+16 more)
src/main/java/hibiki/: BackendManager.java  GuiMain.java
src/main/java/hibiki/ui/: BrowserPane.java  MainView.java  PianoRoll.java  PluginPane.java  SessionView.java  SettingsDialog.java  Theme.java  TopBar.java  WaveformPanel.java
src/test/java/hibiki/: BackendManagerTest.java
src/test/java/hibiki/ui/: ComponentTests.java  ThemeTest.java
testdata/: BUILD  rickroll.mid
testdata/Dexed.vst3/Contents/: Info.plist
testdata/Dexed.vst3/Contents/Resources/: moduleinfo.json
testdata/Dexed.vst3/Contents/_CodeSignature/: CodeResources
