module(
    name = "hibiki",
    version = "0.1.0",
)

# DO NOT UPDATE THESE VERSIONS FOR X11.
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "platforms", version = "1.0.0")

# Non-module dependencies via http_archive
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "midifile",
    url = "https://github.com/craigsapp/midifile/archive/refs/heads/master.zip",
    strip_prefix = "midifile-master",
    build_file = "//third_party:midifile.BUILD",
)

http_archive(
    name = "flatbuffers",
    url = "https://github.com/google/flatbuffers/archive/refs/tags/v25.12.19-2026-02-06-03fffb2.zip",
    strip_prefix = "flatbuffers-25.12.19-2026-02-06-03fffb2",
    # To remove rules_swift conflict.
    patches = ["//third_party:flatbuffers.patch"],
)


python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.13")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//:requirements.txt",
)

use_repo(pip, "pip")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "vst3sdk",
    tag = "v3.8.0_build_66",
    remote = "https://github.com/steinbergmedia/vst3sdk",
    recursive_init_submodules = True,
    build_file = "//third_party:vst3sdk.BUILD"
)
