module(
    name = "hibiki",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "rules_jvm_external", version = "6.7")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "flatbuffers",
    url = "https://github.com/google/flatbuffers/archive/refs/tags/v25.1.24.zip",
    strip_prefix = "flatbuffers-25.1.24",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.flatbuffers:flatbuffers-java:25.1.24",
        "com.formdev:flatlaf:3.5.4",
        "junit:junit:4.13.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "vst3sdk",
    tag = "v3.8.0_build_66",
    remote = "https://github.com/steinbergmedia/vst3sdk",
    recursive_init_submodules = True,
    build_file = "//third_party:vst3sdk.BUILD"
)
